2008-05-20  Petr Stehlik  <pstehlik@sophics.cz>
* .asm->.S: Devpac syntax of asm files converted to gcc one
* gst2gcc: removed, no longer needed
* Makefike.in: updated for compiling/assembling the .S files
* atari_falcon.c: corrected include path to "falcon.h"
* atari.c: corrected C++-ism (my old gcc 2.91 didn't like it)
* DOC/INSTALL.falcon updated (an optimized rebuild script added)


2008-05-15  Perry McFarlane  <perry_m@fastmail.fm>
* rdevice.[ch] atari.c configure.ac: Windows support for R: device.
* USAGE: added record/playback


2008-05-14  Perry McFarlane  <perry_m@fastmail.fm>
* input.c: stdlib for exit()


2008-05-13  Perry McFarlane  <perry_m@fastmail.fm>
* configure.ac: nonlinear mixing minor fix
* input.[ch], configure.ac, pokey.c, atari.c, TODO: event recording


2008-05-11  Perry McFarlane  <perry_m@fastmail.fm>
* dos/atari_vga.c, configure.ac: Atari_PaletteUpdate
* win32/sound.c, pokeysnd.h SND_STEREO removed (obsolete)


2008-05-10  Perry McFarlane  <perry_m@fastmail.fm>
* mzpokeysnd.c, pokeymix.inc: use shorts for smaller file size with table


2008-05-09  Perry McFarlane  <perry_m@fastmail.fm>
* mzpokeysnd.c, pokey.c: fixed two-tone


2008-05-08  Petr Stehlik  <pstehlik@sophics.cz>
* atari.c: get rid of #ifdef USE_CLOCK and also #ifdef DONT_SYNC_WITH_HOST
* configure.ac: get rid of USE_CLOCK for Falcon


2008-05-07  Petr Stehlik  <pstehlik@sophics.cz>
* screen.c: DrawAtariSpeed() now computes the real speed by itself and always
  shows it (if enabled) even if it is at 100% or around (previously it was
  hidden when in range 99% - 101%). It even shows speed < 100% (previously
  it didn't) - hopefully this will help profiling various ./configure
  options on slow Atari800 hosts.

* atari.c: just some cleanup around the atari_sync(), no functional changes.


2008-05-07  Perry McFarlane  <perry_m@fastmail.fm>
* mzpokeysnd.c, configure.ac, pokey.h, pokeymix.inc: Nonlinear mixing,
  two-tone filter, corrected STIMER.

